3.8.1
* Add --debug option in man page

3.8.0
* Add debug mode

3.7.0
* Fix compatibility with android
* getAttachments also returns the filename and upload time

3.6.0
* Use aXMLRPC from fr.turri instead of de.timroes to be able to publish to maven central again

3.5.2
* fix Java 6 compatibility

3.5.1
* fix man page

3.5.0
* add man page

3.4.0
* Upgrade dependency on aXMLRPC (1.8.1) to fix compatibility with DW Detritus. Hence build depends on JCenter
* login command returns a boolean to indicate whether it succeeded

3.3.0
* [FIX] Throws DoukMisConfiguredException instead of Unauthorized, when we fail because of the wiki's configuration
* [FIX] Throw DokuPageDoesNotExistException when trying to getPageInfo on unexisting page
* [FIX] Throw NotAuthorizedException when trying to upload a file without permissions
* Added methods and commands addAcl and delAcl
* putPage and appendPage can read from stdin
* Added method logoff

3.2.0
* Added option --password-interactive

3.1.0
* getPagelist also compute the page hashes

3.0.0
* Added a command line tool
* Fixed a few bugs

2.0.0
* ObjectConverter isn't public anymore
* Implemented timeout
* Also handles DW 2012-01-25b
* Uses aXMLRPC instead of Apache xmlrpc, to enhance cookie handling

1.0.0
* Let pass options when editing a page
* Added DokuJClientConfig
* Let build a DokuJClient with an arbitrary XmlRpcClient
* Let pass arbitrary options when editing a page
* Throw a relevant exception when trying to create an empty new page

0.3.0
* Enhanced attachment manipularions
* Added getRecentChanges(java.util.Date date)
* Fixed bug when reading modification date with getPageInfo

0.2.0
* Added getPageVersions(String pageId)
* Fixed bug when reading page version with gePagelist

0.1.0